@@ -20,6 +20,7 @@ struct GlobalRenderingInfo {
 	char glslVersionShort[256];
 
 	int2 glContextVersion;
+	int2 gpuMemorySize;
 
 	SDL_version sdlVersionCompiled;
 	SDL_version sdlVersionLinked;
